# python-template

./: .env  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  yoyo.ini
.claude/commands/: convert_to_toml.md  create_checklist_3.md  diff_code_review.md  model_code_review.md  pr.md  prime_webapp.md  pystart.md  read.md  response_in_markdown.md  test_runner.md
.claude/commands/archive/: build_context.md
.claude/commands/go/: create_go_structs.md  create_go_structsV1.md  go_build_endpoint_test.md  go_update_config.md
.claude/commands/mcp/: copy_to_clipboard.md  get_docs.md
.claude/commands/python/: python_update_config.md
.claude/commands/tools/: create_database.md  extract.md
.gemini/commands/: diff_code_review.toml  model_code_review.toml  pr.toml  read.toml  response_in_markdown.toml  test_runner.toml
.gemini/commands/archive/: build_context.toml
.gemini/commands/go/: create_go_structsV1.toml  go_build_endpoint_test.toml  go_update_config.toml
.gemini/commands/mcp/: copy_to_clipboard.toml  get_docs.toml
.gemini/commands/python/: python_update_config.toml
.gemini/commands/tools/: create_database.toml  extract.toml
baseservice/: base_api.py  base_service.py
guides/: GITHUB_CLI_CHEAT_SHEET.md  GIT_WORKTREES.md  PYTHON_PARALLEL_TESTING_GUIDE.md  SQLITE_EXAMPLE_USAGE.md  YOYO_CHEAT_SHEET.md  scratch.md
repository/: database.py
tools/: CLAUDE.md  createdb  ensure-github-url  extract  fetchall  killtrees  newpy  startmcp  trees
